# dbcq

./: .dbc  .gitignore  cli-win.ini  cli.ini  db.ini  dbc.ini  dbc.py  dbcq.py  dbquery.py  dump.txt  pyproject.toml  readme.md
dbcq/: __init__.py  __main__.py  _dbc.py  dbc.ct  init.ct  main.ct
html/: index.html
src/dbcq/: __init__.py  __main__.py  dbc.py
