[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "dbcq"
version = "0.0.2"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "db connect query"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "simplejson"
  # you could pyodbc or sqlite3 here, but maybe keep it out and let the user install what he needs?
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.scripts]
dbcq = "dbcq:__main__"

[tool.setuptools]
packages = ["dbcq"]