[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "dbcq"
version = "0.0.4"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "db connect query"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "pyodbc",             
  "simplejson",
  "sqlite3"
  # maybe for now install pyodbc and sqlite3 database drivers so that it works out of the box even if you maybe don't need all of them. or just install pyodbc and let the user install others?
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.scripts]
dbcq = "dbcq:__main__"

[tool.setuptools]
packages = ["dbcq"]