[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "dbcq"
version = "0.0.4"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "db connect query"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "pyodbc",    # maybe for now install pyodbc. sqlite is included in the std library. maybe in the future also install other drivers so that they work out of the box?
  "simplejson"
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.scripts]
dbcq = "dbcq:__main__"

[tool.setuptools]
packages = ["dbcq"]